[gd_scene load_steps=16 format=3 uid="uid://bvpim07i7se1g"]

[ext_resource type="Script" path="res://level_select.gd" id="1_wtpsa"]
[ext_resource type="FontFile" uid="uid://cp06hnbot6cb7" path="res://font/Nunito/static/Nunito-Medium.ttf" id="2_ekla6"]
[ext_resource type="Texture2D" uid="uid://cnb0v6ukb3edh" path="res://Art/Main Menu/UI_1Button.png" id="2_ijqul"]
[ext_resource type="Texture2D" uid="uid://b3situl82j18i" path="res://Art/Main Menu/UI_2Button.png" id="3_0kuay"]
[ext_resource type="Texture2D" uid="uid://1rmxt65vgskl" path="res://Art/Main Menu/UI_3Button.png" id="4_58krm"]
[ext_resource type="Texture2D" uid="uid://c5mqxi1nledwx" path="res://Art/Main Menu/UI_4Button.png" id="5_yx3ve"]
[ext_resource type="Texture2D" uid="uid://cdejbpm10k31g" path="res://Art/Main Menu/UI_5Button.png" id="6_mkg41"]
[ext_resource type="Texture2D" uid="uid://bait04mgixe36" path="res://Art/Main Menu/UI_6Button.png" id="8_voema"]
[ext_resource type="Texture2D" uid="uid://b0htklssgl4t0" path="res://Art/Main Menu/UI_7Button.png" id="9_2h4oc"]
[ext_resource type="Texture2D" uid="uid://g7j8awtgc4c3" path="res://Art/Main Menu/UI_8Button.png" id="10_aicim"]
[ext_resource type="Texture2D" uid="uid://bamp7ynus6uq0" path="res://Art/Main Menu/UI_9Button.png" id="11_uerib"]
[ext_resource type="Texture2D" uid="uid://b3qmyhovj5ti7" path="res://Art/Main Menu/UI_10Button.png" id="12_lxknw"]
[ext_resource type="Texture2D" uid="uid://r48v1hpfn0fo" path="res://Art/Main Menu/UI_11Button.png" id="13_ec1ca"]
[ext_resource type="Texture2D" uid="uid://c5540sv32yiay" path="res://Art/Main Menu/UI_12Button.png" id="14_wyhjg"]
[ext_resource type="Texture2D" uid="uid://cjlgso42caneh" path="res://Sprites/LevelSelectHighlighter.png" id="15_1axpy"]

[node name="LevelSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wtpsa")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.611765, 0.462745, 0.360784, 1)

[node name="SelectLevel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 137.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.898039, 0.784314, 0.682353, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("2_ekla6")
theme_override_font_sizes/font_size = 80
text = "Select Your Level!"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
z_index = 1
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
theme_override_constants/margin_top = 100

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="MarginContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/h_separation = 30
theme_override_constants/v_separation = 30
columns = 6

[node name="Button1" type="Button" parent="MarginContainer/CenterContainer/GridContainer"]
custom_minimum_size = Vector2(250, 250)
layout_mode = 2
theme_override_font_sizes/font_size = 80
text = "1"

[node name="Ui1Button" type="TextureRect" parent="MarginContainer/CenterContainer/GridContainer/Button1"]
layout_mode = 0
offset_left = -172.0
offset_top = -172.0
offset_right = 1876.0
offset_bottom = 1876.0
scale = Vector2(0.29, 0.29)
texture = ExtResource("2_ijqul")

[node name="Button2" type="Button" parent="MarginContainer/CenterContainer/GridContainer"]
custom_minimum_size = Vector2(250, 250)
layout_mode = 2
theme_override_font_sizes/font_size = 80
text = "2"

[node name="Ui2Button" type="TextureRect" parent="MarginContainer/CenterContainer/GridContainer/Button2"]
layout_mode = 0
offset_left = -172.0
offset_top = -172.0
offset_right = 1876.0
offset_bottom = 1876.0
scale = Vector2(0.29, 0.29)
texture = ExtResource("3_0kuay")

[node name="Button3" type="Button" parent="MarginContainer/CenterContainer/GridContainer"]
custom_minimum_size = Vector2(250, 250)
layout_mode = 2
theme_override_font_sizes/font_size = 80
text = "3"

[node name="Ui3Button" type="TextureRect" parent="MarginContainer/CenterContainer/GridContainer/Button3"]
layout_mode = 0
offset_left = -172.0
offset_top = -172.0
offset_right = 1876.0
offset_bottom = 1876.0
scale = Vector2(0.29, 0.29)
texture = ExtResource("4_58krm")

[node name="Button4" type="Button" parent="MarginContainer/CenterContainer/GridContainer"]
custom_minimum_size = Vector2(250, 250)
layout_mode = 2
theme_override_font_sizes/font_size = 80
text = "4"

[node name="Ui4Button" type="TextureRect" parent="MarginContainer/CenterContainer/GridContainer/Button4"]
layout_mode = 0
offset_left = -172.0
offset_top = -172.0
offset_right = 1876.0
offset_bottom = 1876.0
scale = Vector2(0.29, 0.29)
texture = ExtResource("5_yx3ve")

[node name="Button5" type="Button" parent="MarginContainer/CenterContainer/GridContainer"]
custom_minimum_size = Vector2(250, 250)
layout_mode = 2
theme_override_font_sizes/font_size = 80
text = "5"

[node name="Ui5Button" type="TextureRect" parent="MarginContainer/CenterContainer/GridContainer/Button5"]
layout_mode = 0
offset_left = -172.0
offset_top = -172.0
offset_right = 1876.0
offset_bottom = 1876.0
scale = Vector2(0.29, 0.29)
texture = ExtResource("6_mkg41")

[node name="Button6" type="Button" parent="MarginContainer/CenterContainer/GridContainer"]
custom_minimum_size = Vector2(250, 250)
layout_mode = 2
theme_override_font_sizes/font_size = 80
text = "6"

[node name="Ui6Button" type="TextureRect" parent="MarginContainer/CenterContainer/GridContainer/Button6"]
layout_mode = 0
offset_left = -172.0
offset_top = -172.0
offset_right = 1876.0
offset_bottom = 1876.0
scale = Vector2(0.29, 0.29)
texture = ExtResource("8_voema")

[node name="Button7" type="Button" parent="MarginContainer/CenterContainer/GridContainer"]
custom_minimum_size = Vector2(250, 250)
layout_mode = 2
theme_override_font_sizes/font_size = 80
text = "7"

[node name="Ui7Button" type="TextureRect" parent="MarginContainer/CenterContainer/GridContainer/Button7"]
layout_mode = 0
offset_left = -172.0
offset_top = -172.0
offset_right = 1876.0
offset_bottom = 1876.0
scale = Vector2(0.29, 0.29)
texture = ExtResource("9_2h4oc")

[node name="Button8" type="Button" parent="MarginContainer/CenterContainer/GridContainer"]
custom_minimum_size = Vector2(250, 150)
layout_mode = 2
theme_override_font_sizes/font_size = 80
text = "8
"

[node name="Ui8Button" type="TextureRect" parent="MarginContainer/CenterContainer/GridContainer/Button8"]
layout_mode = 0
offset_left = -172.0
offset_top = -172.0
offset_right = 1876.0
offset_bottom = 1876.0
scale = Vector2(0.29, 0.29)
texture = ExtResource("10_aicim")

[node name="Button9" type="Button" parent="MarginContainer/CenterContainer/GridContainer"]
custom_minimum_size = Vector2(250, 250)
layout_mode = 2
theme_override_font_sizes/font_size = 80
text = "9
"

[node name="Ui9Button" type="TextureRect" parent="MarginContainer/CenterContainer/GridContainer/Button9"]
layout_mode = 0
offset_left = -172.0
offset_top = -172.0
offset_right = 1876.0
offset_bottom = 1876.0
scale = Vector2(0.29, 0.29)
texture = ExtResource("11_uerib")

[node name="Button10" type="Button" parent="MarginContainer/CenterContainer/GridContainer"]
custom_minimum_size = Vector2(250, 250)
layout_mode = 2
theme_override_font_sizes/font_size = 80
text = "10"

[node name="Ui10Button" type="TextureRect" parent="MarginContainer/CenterContainer/GridContainer/Button10"]
layout_mode = 0
offset_left = -172.0
offset_top = -172.0
offset_right = 1876.0
offset_bottom = 1876.0
scale = Vector2(0.29, 0.29)
texture = ExtResource("12_lxknw")

[node name="Button11" type="Button" parent="MarginContainer/CenterContainer/GridContainer"]
custom_minimum_size = Vector2(250, 250)
layout_mode = 2
theme_override_font_sizes/font_size = 80
text = "11"

[node name="Ui11Button" type="TextureRect" parent="MarginContainer/CenterContainer/GridContainer/Button11"]
layout_mode = 0
offset_left = -172.0
offset_top = -172.0
offset_right = 1876.0
offset_bottom = 1876.0
scale = Vector2(0.29, 0.29)
texture = ExtResource("13_ec1ca")

[node name="Button12" type="Button" parent="MarginContainer/CenterContainer/GridContainer"]
custom_minimum_size = Vector2(250, 250)
layout_mode = 2
theme_override_font_sizes/font_size = 80
text = "12"

[node name="Ui12Button" type="TextureRect" parent="MarginContainer/CenterContainer/GridContainer/Button12"]
layout_mode = 0
offset_left = -172.0
offset_top = -172.0
offset_right = 1876.0
offset_bottom = 1876.0
scale = Vector2(0.29, 0.29)
texture = ExtResource("14_wyhjg")

[node name="Focus" type="TextureRect" parent="."]
modulate = Color(0.898039, 0.784314, 0.682353, 1)
layout_mode = 0
offset_left = 69.0
offset_top = 259.0
offset_right = 269.0
offset_bottom = 459.0
scale = Vector2(1.9182, 1.9182)
texture = ExtResource("15_1axpy")

[connection signal="pressed" from="MarginContainer/CenterContainer/GridContainer/Button1" to="." method="_on_button_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/GridContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/GridContainer/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/GridContainer/Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/GridContainer/Button5" to="." method="_on_button_5_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/GridContainer/Button6" to="." method="_on_button_6_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/GridContainer/Button7" to="." method="_on_button_7_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/GridContainer/Button8" to="." method="_on_button_8_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/GridContainer/Button9" to="." method="_on_button_9_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/GridContainer/Button10" to="." method="_on_button_10_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/GridContainer/Button11" to="." method="_on_button_11_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/GridContainer/Button12" to="." method="_on_button_12_pressed"]
